quick fix for alignment issues

--- a/assets/ebook.css
+++ b/assets/ebook.css
@@ -48,7 +48,7 @@ button {
   width: 690px;
 }
 
-.hero .overview div.tagline {
+.hero .overview div.tagline, .hero .overview div.cta {
   width: 100%;
   display: inline-block;
   text-align: left;
